# good4ncu

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPER.md  Dockerfile  README.md  config.toml.example  reports.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: .env.example  AGENTS.md  API_CHAT.md  ARCHITECTURE_AUDIT.md  AUDIT_2026Q1.md  CLAUDE.md  CONTRIBUTING.md  DB_UUID_MIGRATION_PLAN.md  DEVELOPER.md  EXECUTION_PLAN_2026Q2.md  PLAN.md  README.md  ROADMAP.md  SPEC_PLANS.md  chat_system.md  config.toml.example  instructions.md  test_plan_chat.md  user_guide.md
migrations/: 0001__init.sql  0002_add_refresh_tokens.sql  0003_add_user_status.sql  0004_chat_message_status.sql  0005_seed_data.sql  0006_add_chat_connections_unread_count.sql  0007__search_performance_indexes.sql  0008_add_users_avatar_url.sql  0009_add_users_email.sql  0010_admin_audit_logs.sql  0011_moderation_jobs.sql  0012_chat_connections_bidirectional_unique.sql  0013_chat_media_urls.sql  0014_core_updated_at.sql  0015_fix_conversation_id_type.sql  0016_add_revoked_access_tokens.sql  0017_uuid_shadow_columns.sql  1__init.sql
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  utils.rs
src/agents/: marketplace.rs  mod.rs  models.rs  negotiate.rs  router.rs  tools.rs
src/api/: admin.rs  (+17 more)
tests/: admin_auth_regression.rs  agent_tools_auth_regression.rs  chat_e2e.rs  chat_integration.rs  chat_transaction_integration.rs  order_transaction_integration.rs  product_integration.rs  uuid_shadow_migration_integration.rs
(+136 files in other folders)
