[package]
name = "good4ncu"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { version = "0.33.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.7.5"
schemars = "1.0.4"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rig-postgres = "0.2.2"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "migrate"] }
pgvector = "0.4"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["json", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "limit"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
rand = "0.10.0"
dashmap = "5.5"
lazy_static = "1.4"
moka = { version = "0.12", features = ["sync", "future"] }
async-trait = "0.1"
async-stream = "0.3"
regex = "1.10"
base64 = "0.22.1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tokio-tungstenite = "0.28"
futures-util = "0.3"
futures = "0.3"
prometheus = "0.13"

[features]
default = []
redis = ["dep:redis"]

[dependencies.redis]
version = "0.27"
optional = true
features = ["tokio-comp", "connection-manager"]
